--- a/coursework.ipynb
+++ b/coursework.ipynb
@@ -88,8 +88,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T15:58:40.483368Z",
-     "start_time": "2024-11-25T15:58:40.478593Z"
+     "end_time": "2024-11-25T22:16:58.429372Z",
+     "start_time": "2024-11-25T22:16:58.413572Z"
     }
    },
    "cell_type": "code",
@@ -97,7 +97,7 @@
     "def generate_initial_solution(dag):\n",
     "    # generating an initial solution using a topical sort\n",
     "    num_edges_into_node = {}\n",
-    "    all_nodes = set(list(range(num_nodes)))\n",
+    "    all_nodes = set(np.array(list(range(num_nodes))) + 1)\n",
     "    \n",
     "    # initializing dictionary\n",
     "    for node in all_nodes:\n",
@@ -127,7 +127,7 @@
    ],
    "id": "61afd857eb9c1792",
    "outputs": [],
-   "execution_count": 55
+   "execution_count": 340
   },
   {
    "cell_type": "code",
@@ -151,8 +151,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T21:42:30.112873Z",
-     "start_time": "2024-11-25T21:42:30.093733Z"
+     "end_time": "2024-11-25T22:16:06.934734Z",
+     "start_time": "2024-11-25T22:16:06.923521Z"
     }
    },
    "cell_type": "code",
@@ -162,25 +162,6 @@
     "    return (job_i, job_j) not in reachable and (job_j, job_i) not in reachable # if either u depends on v or v depends on u, cannot swap nodes\n",
     "\n",
     "def generate_neighboring_schedule(schedule, tabu_list, swap_index, reachable=reachable):\n",
-    "    neighboring_schedule = []\n",
-    "    step_counter = 0\n",
-    "    \n",
-    "    # random swapping neighbor generation, not restricted to adjacent jobs\n",
-    "    # i_list = list(range(num_nodes))\n",
-    "    # random.shuffle(i_list)\n",
-    "    # j_list = list(range(num_nodes))\n",
-    "    # random.shuffle(j_list)\n",
-    "    # \n",
-    "    # # shuffle lists so we don't overweight swaps early in schedule\n",
-    "    # for i in i_list:\n",
-    "    #     for j in j_list:\n",
-    "    #         job_i, job_j = schedule[i], schedule[j]\n",
-    "    #         if is_valid_swap(job_i, job_j, reachable) and (job_i, job_j) not in tabu_list:\n",
-    "    #             neighboring_schedule = schedule[:]\n",
-    "    #             neighboring_schedule[i], neighboring_schedule[j] = neighboring_schedule[j], neighboring_schedule[i]\n",
-    "    #             return neighboring_schedule, (job_i, job_j), i\n",
-    "    # \n",
-    "    \n",
     "    for step_counter in range(len(schedule)):\n",
     "        i = (swap_index + step_counter) % (len(schedule) - 1)\n",
     "        j = (swap_index + step_counter + 1) % (len(schedule) - 1)\n",
@@ -191,7 +172,7 @@
     "            return neighboring_schedule, (job_i, job_j), i\n",
     "                \n",
     "    # if no valid neighbors, we are done            \n",
-    "    return neighboring_schedule, (-1, -1), -1\n",
+    "    return [], (-1, -1), -1\n",
     "\n",
     "def evaluate_tardiness(schedule, p, d):\n",
     "    total_tardiness = 0\n",
@@ -246,7 +227,7 @@
    ],
    "id": "8022e2c47ecbc32c",
    "outputs": [],
-   "execution_count": 213
+   "execution_count": 336
   },
   {
    "metadata": {
@@ -275,13 +256,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-25T21:43:41.786697Z",
-     "start_time": "2024-11-25T21:43:41.775340Z"
+     "end_time": "2024-11-25T22:22:10.505605Z",
+     "start_time": "2024-11-25T22:20:19.760148Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "best_schedule, best_tardiness = tabu_search(dag, p, d)\n",
+    "best_schedule, best_tardiness = tabu_search(dag, p, d, num_iterations=500000, use_default_initial_solution=False)\n",
     "print(best_tardiness)\n",
     "print(best_schedule)"
    ],
@@ -291,37 +272,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "226\n",
-      "[30, 14, 4, 20, 23, 3, 13, 29, 28, 10, 9, 19, 8, 22, 21, 18, 17, 15, 7, 6, 16, 27, 11, 26, 25, 24, 12, 5, 2, 1, 31]\n"
+      "158\n",
+      "[30, 14, 10, 4, 3, 9, 23, 22, 8, 7, 21, 6, 20, 19, 18, 17, 16, 29, 28, 27, 26, 13, 12, 25, 24, 5, 2, 15, 11, 1, 31]\n"
      ]
     }
    ],
-   "execution_count": 221
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-25T15:32:24.959319Z",
-     "start_time": "2024-11-25T15:32:24.956585Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "print(generate_initial_solution(dag))\n",
-    "print(initial_solution)"
-   ],
-   "id": "c2c0edebb2cabfbf",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[29, 13, 19, 22, 28, 3, 9, 12, 18, 21, 27, 26, 2, 8, 11, 20, 25, 7, 17, 24, 6, 16, 23, 5, 14, 15, 10, 4, 1, 0, 30]\n",
-      "[29, 28, 22, 9, 8, 13, 12, 11, 3, 19, 21, 2, 26, 27, 7, 6, 18, 20, 25, 17, 24, 16, 14, 5, 23, 15, 4, 10, 1, 0, 30]\n"
-     ]
-    }
-   ],
-   "execution_count": 16
+   "execution_count": 354
   },
   {
    "metadata": {
