removing unecessary imports

--- a/coursework.ipynb
+++ b/coursework.ipynb
@@ -14423,13 +14423,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-27T01:36:31.633920Z",
-     "start_time": "2024-11-27T01:36:02.823668Z"
+     "end_time": "2024-11-27T02:30:38.927064Z",
+     "start_time": "2024-11-27T02:30:08.572729Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from mpl_toolkits.mplot3d import Axes3D\n",
     "tardinesses = []\n",
     "for L in tabu_list_lengths:\n",
     "    for tolerance in tolerances:\n",
@@ -14473,7 +14472,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 169
+   "execution_count": 185
   },
   {
    "metadata": {
@@ -14484,6 +14483,7 @@
    },
    "cell_type": "code",
    "source": [
+    "# brute force finding the optimal solution\n",
     "tardinesses = []\n",
     "best_s = []\n",
     "best_t = 1000\n",
