--- a/scheduling_LCL.ipynb
+++ b/scheduling_LCL.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,13 +105,13 @@
     "        if count in {1, 2, 5, 10, 15, 20, 25}:\n",
     "            print('Iteration number {0}: Schedule is '.format(count), [1 + n for n in schedule[::-1]])\n",
     "        \n",
-    "    print('Iteration number 31: Schedule is ', [1 + n for n in schedule[::-1]])\n",
+    "    print('Final Schedule is ', [1 + n for n in schedule[::-1]])\n",
     "    return [1 + n for n in schedule[::-1]], total_cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -125,20 +125,15 @@
       "Iteration number 15: Schedule is  [14, 29, 28, 27, 26, 25, 24, 13, 12, 5, 2, 15, 11, 1, 31]\n",
       "Iteration number 20: Schedule is  [8, 7, 6, 17, 16, 14, 29, 28, 27, 26, 25, 24, 13, 12, 5, 2, 15, 11, 1, 31]\n",
       "Iteration number 25: Schedule is  [20, 19, 18, 10, 9, 8, 7, 6, 17, 16, 14, 29, 28, 27, 26, 25, 24, 13, 12, 5, 2, 15, 11, 1, 31]\n",
-      "Iteration number 31: Schedule is  [30, 4, 3, 23, 22, 21, 20, 19, 18, 10, 9, 8, 7, 6, 17, 16, 14, 29, 28, 27, 26, 25, 24, 13, 12, 5, 2, 15, 11, 1, 31]\n"
+      "Final Schedule is  [30, 4, 3, 23, 22, 21, 20, 19, 18, 10, 9, 8, 7, 6, 17, 16, 14, 29, 28, 27, 26, 25, 24, 13, 12, 5, 2, 15, 11, 1, 31]\n",
+      "Cost is  65\n"
      ]
     }
    ],
    "source": [
-    "schedule, cost = least_cost_last(dag, p, d)"
+    "schedule, cost = least_cost_last(dag, p, d)\n",
+    "print('Cost is ', cost)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
