--- a/scheduling_LCL.ipynb
+++ b/scheduling_LCL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,10 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "star_line = \"*****************************************************************************************************************************************\\n\"\n",
+    "\n",
     "# Constructs an inverted graph by adjacency list and num_successors from a set of edges.\n",
     "def build_graph(edges):\n",
     "\n",
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +81,7 @@
     "    # Jobs to be scheduled are ones with 0 successors\n",
     "    ready_to_schedule = {job for job in num_successors if num_successors[job] == 0}\n",
     "    count = 0\n",
+    "    printout = \"\"\n",
     "    # While we have jobs to be scheduled left\n",
     "    while ready_to_schedule:\n",
     "        count += 1\n",
@@ -104,14 +107,22 @@
     "\n",
     "        if count in {1, 2, 5, 10, 15, 20, 25}:\n",
     "            print('Iteration number {0}: Schedule is '.format(count), [1 + n for n in schedule[::-1]])\n",
+    "            print('Cost is', total_cost)\n",
+    "            printout += 'Iteration number {0}: Schedule is '.format(count) + str([1 + n for n in schedule[::-1]]) + '\\n'\n",
+    "            printout += 'Cost is ' + str(total_cost) +'\\n'\n",
+    "            printout += star_line\n",
     "        \n",
     "    print('Final Schedule is ', [1 + n for n in schedule[::-1]])\n",
-    "    return [1 + n for n in schedule[::-1]], total_cost"
+    "    printout += 'Final Schedule is ' + str([1 + n for n in schedule[::-1]]) + '\\n'\n",
+    "    printout += 'Cost is ' + str(total_cost) +'\\n'\n",
+    "    printout += star_line\n",
+    "    \n",
+    "    return [1 + n for n in schedule[::-1]], total_cost, printout"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -119,21 +130,65 @@
      "output_type": "stream",
      "text": [
       "Iteration number 1: Schedule is  [31]\n",
+      "Cost is 0\n",
       "Iteration number 2: Schedule is  [1, 31]\n",
+      "Cost is 0\n",
       "Iteration number 5: Schedule is  [2, 15, 11, 1, 31]\n",
+      "Cost is 65\n",
       "Iteration number 10: Schedule is  [25, 24, 13, 12, 5, 2, 15, 11, 1, 31]\n",
+      "Cost is 65\n",
       "Iteration number 15: Schedule is  [14, 29, 28, 27, 26, 25, 24, 13, 12, 5, 2, 15, 11, 1, 31]\n",
+      "Cost is 65\n",
       "Iteration number 20: Schedule is  [8, 7, 6, 17, 16, 14, 29, 28, 27, 26, 25, 24, 13, 12, 5, 2, 15, 11, 1, 31]\n",
+      "Cost is 65\n",
       "Iteration number 25: Schedule is  [20, 19, 18, 10, 9, 8, 7, 6, 17, 16, 14, 29, 28, 27, 26, 25, 24, 13, 12, 5, 2, 15, 11, 1, 31]\n",
+      "Cost is 65\n",
       "Final Schedule is  [30, 4, 3, 23, 22, 21, 20, 19, 18, 10, 9, 8, 7, 6, 17, 16, 14, 29, 28, 27, 26, 25, 24, 13, 12, 5, 2, 15, 11, 1, 31]\n",
-      "Cost is  65\n"
+      "Cost is 65\n"
      ]
     }
    ],
    "source": [
-    "schedule, cost = least_cost_last(dag, p, d)\n",
-    "print('Cost is ', cost)"
+    "schedule, cost, printout = least_cost_last(dag, p, d)\n",
+    "print('Cost is', cost)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data has been written to printout_lcl.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"printout_lcl.txt\", \"w\") as file:\n",
+    "    # Write some text to the file\n",
+    "    file.write(\"This is a printout of the iterations for the Least Cost Last Rule\\n\")\n",
+    "    file.write(star_line)\n",
+    "    file.write(printout)\n",
+    "\n",
+    "print(\"Data has been written to printout_lcl.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
